updated file connedtion

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>PassKey</title>
-    <link rel="stylesheet" href="ScoreGenStyle.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/zxcvbn/dist/zxcvbn.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-    <script src="ScoreGen.js"></script>
+    <script src="app.js"></script>
 
 </body>
 </html>
